--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.5"
+    "react-router": "^4.3.1",
+    "react-scripts": "^1.1.5",
+    "styled-components": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
